src/objects/X3_0_Kasese_Maize__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_Mazie_grain_at_retail_price__c</fullName>
        <label>A Kg of Mazie grain at retail price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_Mazie_grain_at_wholesale_price__c</fullName>
        <label>A Kg of Mazie grain at wholesale price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_Maize__c</fullName>
        <label>Name of trader in Maize</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Kasese__c</fullName>
        <label>3.0 Market Kasese</label>
        <referenceTo>Market_Kasese__c</referenceTo>
        <relationshipLabel>3.0 Kasese Maize</relationshipLabel>
        <relationshipName>X3_0_Kasese_Maize</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Kasese Maize</label>
    <nameField>
        <displayFormat>KM-{0000}</displayFormat>
        <label>3.0 Kasese Maize Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Kasese Maize</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>